style.css
body {
    background: #788fa1;
    font-family: Montserrat;
}

.nav-link {
    text-transform: uppercase;

}

#mainNav .navbar-brand {
    color: #ff9933;


}

#mainNav, .navbar-brand {
    font-size: 1.5rem;
    font-weight: 300;
    color: #ffffff;
}

#mainContent {
    margin-top: 70px; 
    /* default margin, but changed by jquery in custom.js file */
}

@media (max-width: 992px) {
    h1 {
        font-size: 2rem;
    }
}

.clouds {
    background-image: url('./clouds-sea.jpg');
    /* background-size: cover; */
}

